Bug 19208 - src/cairo-os2-surface.c:791: Memory leak: local_os2_surface
Summary: src/cairo-os2-surface.c:791: Memory leak: local_os2_surface
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.9.1
Hardware: All All
: medium normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-20 11:07 UTC by dvice_null
Modified: 2008-12-20 11:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description dvice_null 2008-12-20 11:07:14 UTC
This bug was found from the latest git version. 

In file src/cairo-os2-surface.c:79: 
Variable local_os2_surface leaks memory when this "if" is executed:

    if (rc != NO_ERROR) {
        /* Could not create mutex semaphore! */
	return _cairo_surface_create_in_error (_cairo_error (CAIRO_STATUS_NO_MEMORY));
    }

This bug was found using cppcheck: http://cppcheck.wiki.sourceforge.net/
Comment 1 Chris Wilson 2008-12-20 11:20:58 UTC
Fixed in local tree.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.